Adicionar implementação de servidor Fastify e atualizar package.json para suporte ao TypeScript

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "02-servidor-fastify",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "dev": "node dist/servidor.js"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +12,9 @@
   "description": "",
   "dependencies": {
     "fastify": "^5.2.1"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   }
 }
